--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
 
 <div class="result" id="resultado"></div>
     </div>
+
 </main>
+
+<div class="propaganda">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9473158635624224"
+        crossorigin="anonymous"></script>
+    </div>
+
+
 <script src="/imc.js"></script>
 </body>
 </html>
